--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^7.0.2",
+    "sass": "^1.81.1",
+    "styled-components": "^6.1.13",
+    "tailwindcss": "^3.4.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
